# ZomChess

./: .gitignore  CMakeLists.txt  Gameplay.txt  README.md  ZomChess.jl  changelog.md  imgui_setup.h  main.cpp  replace_guide.py  vcpkg.json
assets/music/: README.md
src/: AudioManager.cpp  AudioManager.h  Entities.h  GameConstants.h  GameState.cpp  GameState.h  SoundSynth.h  SplashScreen.h  Types.h  UI.h  main.cpp
src/embedded/: defeat_theme.h  victory_theme.h
